--- a/src/app/attribution/attribution.component.html
+++ b/src/app/attribution/attribution.component.html
@@ -1,7 +1,190 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Attribution</h1>
-
-  <mat-card class="dashboard-card" >
-
-  </mat-card>
+<div class="bannercontainer">
+  <img src="http://2018.igem.org/wiki/images/0/03/T--GO_Paris-Saclay--fond_groupe.png"
+       class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png"
+       class="bannerimg superposedbanner2">
+  <div class="headlinetext">Attribution</div>
 </div>
+
+<mat-card class="dashboard-card largemargin">
+  <p>
+    We, at iGEM GO Paris-Saclay are proud to state that we conceived the idea for Methotrexite. We designed and created
+    from
+    top to bottom every single step of the degradation process of the Methotrexate (MTX), implemented it inside
+    Escherichia
+    coli and designed the best model, in order to prove that, GMO and synthetic Biology can solve the biggest problems
+    of society :-)
+  </p>
+  <p>
+    That being said, we would like to thank our advisors for their help, patient and guidance during this incredible
+    journey.
+  </p>
+  <p class="spacemaker"></p>
+
+  <h1>Advisors and Researcher</h1>
+
+  <div class="personcontainer">
+    <div class="sideportrait">
+      <img src="http://2018.igem.org/wiki/images/3/3e/T--GO_Paris-Saclay--sylvie.jpg">
+    </div>
+    <h2>Sylvie Lautru</h2>
+
+    <p>
+      Sylvie is a researcher at Institute for Integrative Biology of the Cell (I2BC), CNRS. Her team provided tools and
+      the
+      material during the lab experiment. She took the time to organize everything during our lab relocation in the
+      middle
+      of the summer. She also supervised the wet lab during July, and was a big help for all the “travel to Boston and
+      attend the Giant Jamboree” paperwork due to her years of experience being advisor of our iGEM team.
+    </p>
+  </div>
+
+  <p class="spacemaker"></p>
+
+  <div class="personcontainer">
+    <div class="sideportrait">
+      <img src="http://2018.igem.org/wiki/images/9/9c/T--GO_Paris-Saclay--stephanie.jpg">
+    </div>
+    <h2>Stephanie Bury-Mone</h2>
+
+    <p>
+      Stéphanie is a professor at Paris-Sud University and researcher at Institute for Integrative Biology of the Cell
+      (I2BC). She was a lab supervisor. Her background and knowledge in microbiology was so helpful and we are glad that
+      she is part of the team. She was a core of our project design. we could not reach to this level of advancement in
+      our project without her.
+    </p>
+  </div>
+  <p class="spacemaker"></p>
+
+  <div class="personcontainer">
+    <div class="sideportrait">
+      <img src="http://2018.igem.org/wiki/images/c/c5/T--GO_Paris-Saclay--philippe.jpg">
+    </div>
+    <h2>Philippe Bouloc</h2>
+
+    <p>
+      Philippe is a researcher and a team director at Institute for Integrative Biology of the Cell (I2BC), CNRS. He is
+      the godfather of the iGEM GO_Paris Saclay team. Philippe told us about the history of the team and really showed
+      us the way to meet the criteria of the medals in the iGEM competition. He also guided us for project design.
+      Present also in the lab any time that we needed him, Philippe helped us for wet lab as well. He was our
+      troubleshooter each time we faced a problem. Oh and also we love his coffee machine.
+    </p>
+  </div>
+  <p class="spacemaker"></p>
+
+  <div class="personcontainer">
+    <div class="sideportrait">
+      <img src="http://2018.igem.org/wiki/images/4/40/T--GO_Paris-Saclay--olivier.jpg">
+    </div>
+    <h2>Olivier Namy</h2>
+
+    <p>
+      Olivier is a researcher and a team director at Institute for Integrative Biology of the Cell (I2BC), CNRS. During
+      the brainstorming for this year project and the team meetings , Olivier gave us plenty of advices and provided
+      many essential lab equipments for the team and we would like to thank him for that.
+    </p>
+  </div>
+  <p class="spacemaker"></p>
+
+  <div class="personcontainer">
+    <div class="sideportrait">
+      <img src="http://2018.igem.org/wiki/images/5/5e/T--GO_Paris-Saclay--celine.jpg">
+    </div>
+    <h2>Céline Aubry</h2>
+
+    <p>
+      PhD student at Paris-Sud University. She was the bravest to be the first lab supervisor of this year team.
+      Explaining every aspect of lab life and lab functionality to our team was not simple. We started the lab
+      experience with her and this is why we have a working bacteria now! We would like to thank her for her patience
+      and guidance during the first month. </p>
+
+  </div>
+  <p class="spacemaker"></p>
+
+  <div class="personcontainer">
+    <div class="sideportrait">
+      <img src="http://2018.igem.org/wiki/images/6/62/T--GO_Paris-Saclay--mahnaz.jpg">
+    </div>
+    <h2>Mahnaz Sabeti-Azad</h2>
+
+    <p>
+      PhD student at Paris-Sud University. She was the bravest to be the first lab supervisor of this year team.
+      Explaining every aspect of lab life and lab functionality to our team was not simple. We started the lab
+      experience with her and this is why we have a working bacteria now! We would like to thank her for her patience
+      and guidance during the first month. </p>
+  </div>
+  <p class="spacemaker"></p>
+
+  <div class="personcontainer">
+    <div class="sideportrait">
+      <img src="http://2018.igem.org/wiki/images/2/2e/T--GO_Paris-Saclay--arnaud.png">
+    </div>
+    <h2>Arnaud Ferré</h2>
+
+    <p>
+      During the brainstorming for project ideas, Arnaud helped us with lots of tips for our presentation and poster.
+      Without him, we wouldn’t had finished 2nd at the European meetup.
+    </p>
+
+  </div>
+  <p class="spacemaker"></p>
+
+  <h1>Team Member</h1>
+
+  <h2>BRIAND William</h2>
+  <p>Clear presentation, he showed us the 3 simple steps of the MTX degradation. William spent 1 month in the lab trying
+    to make our project real, mainly in the cloning process of our biobricks. He was also invested in the design, update
+    and realisation of the wiki.
+  </p>
+
+  <h2>DAO Ousmane</h2>
+  <p>Even if his entire holiday was already booked for an important internship, Ousman really helped us in the
+    theoretical part of the project. He also did a lot on the wiki, and on the human practice with a nice publication of
+    an article describing our project on the faculty newsletter.
+  </p>
+  <h2>GUEGAN Raphaël</h2>
+  <p>He is a mathematician of the team, he co-designed and created the modelisation of our project and the iGEM Sorbonne
+    team project. Raphael was present almost every meeting with some very interesting ideas, and gave us some really
+    practical, banquable feedbacks on the project.
+  </p>
+  <h2>MARTA Britany</h2>
+  <p>There was no holiday for Britany, more than 2 months of work in the lab, from the cloning time, to the test of our
+    biobrick in E. coli, she was there and dedicated to the success of the project. She was in charge of interlab study.
+  </p>
+  <h2>MAUPU Clémence</h2>
+  <p>She was more focused on the chemical degradation part of the project. Clémence spent her entire holiday in the lab,
+    at the end of the first month she was in charge of the “folC” part of the project. Outside of the lab, Clémence was
+    there at every presentation and lots of meeting sharing her ideas and preoccupations about the project.
+  </p>
+  <h2>MIESCH Julie</h2>
+  <p>She also spent more than a 1 month in the lab doing the cloning of our biobricks. Outside the lab she paired with
+    Arthur on the Poster and slide design. She really spent a lot of time learning the css and html languages in order
+    to improve a lot our wiki. Julie was dedicated to the wellbeing of the project.
+  </p>
+
+  <h2>PAPADOPOULO Kenn</h2>
+  <p>He participated in the wet lab during the summer for 1 month and half mainly cloning all of our interest genes.
+    Outside the lab, he was in the charge of different tasks such as sponsoring, graphic design (creating a hole new
+    logo for the team), collaborations, human practice and presentation of the project in different meetups.
+  </p>
+  <h2>RADOUX Arthur</h2>
+  <p>He spent more than a 1 month in the lab mainly doing transduction experimentation trying to knock down the efflux
+    pump, and also cloning all of our interest genes. Outside the lab, Arthur spent a lot of time on creating the best
+    poster and slides in order to make our project shine. He is one of the reasons we finished 2nd at the European
+    meetup. Arthur also realised interviews for the human practice part of the project
+  </p>
+  <h2>ROJAHN Julie</h2>
+  <p>She was in charge of several parts of the project. Julie spent 3 weeks in the lab focus on differents parts of the
+    project. She also worked on the human practice part.
+  </p>
+  <h2>ZHU Yueying</h2>
+  <p>She was invested on very special part of the project in the lab such as the “Lee5 GFP”. She took the responsibility
+    to carry this part from top to bottom, and for that we are happy she is part of the team. Yueying was full of ideas
+    about how to gain time in the lab even if she was sick, but nothing would had make her back down.
+  </p>
+
+  <p class="spacemaker"></p>
+
+
+
+</mat-card>
