--- a/src/app/collaborations/collaborations.component.html
+++ b/src/app/collaborations/collaborations.component.html
@@ -1,17 +1,82 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Collaborations</h1>
+<div class="bannercontainer">
+  <img src="http://2018.igem.org/wiki/images/5/58/T--GO_Paris-Saclay--collab_underbanner.png"
+       class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png"
+       class="bannerimg superposedbanner2">
+  <div class="headlinetext">Collaborations</div>
+</div>
 
-  <mat-card class="dashboard-card" >
-    <div class="mat-h1">European meetup with the iGEM community</div>
 
-    <div>
-<img class="emeetupimgtall" src="http://2018.igem.org/wiki/images/2/21/T--GO_Paris-Saclay--european_meetup_1.jpg" >
+<mat-card class="dashboard-card largemargin">
+
+  <p style="margin-bottom: 1em;">
+    During this 2018 edition, we made fruitful connections with many teams :
+  </p>
+  <h1>Sorbonne University team</h1>
+  <img class="pmeetup" src="http://2018.igem.org/wiki/images/4/48/T--GO_Paris-Saclay--sorbonne_collab.jpg">
+  <p>Sorbonne University/IGEM GO Paris_Saclay is probably the best example of what a real collaboration is. Because our
+    team lacked programmers and designers, they proposed to help us with the coding part of IGEM (which really helped us
+    in
+    creating our wiki), and with the sketching process of our new logo.</p>
+  <p>
+    We, on the other hand, realised that there was no mathematician in their team. Our two mathematicians proposed to
+    work with them on the modelling of their project.
+  </p>
+  <p class="spacemaker"></p>
+
+  <h1>Grenoble team</h1>
+  <img src="http://2018.igem.org/wiki/images/b/ba/T--GO_Paris-Saclay--grenoble_collab.jpg" class="pmeetup">
+  <p>
+    In collaboration with the iGEM Grenoble team we created the: “Take a famous painting and throw some biology in it
+    challenge”. Pictures were posted on social media, the one with the most “likes” wins the competition. A very fun
+    challenge indeed, a nice break from the lab during the summer.
+  </p>
+  <p class="spacemaker"></p>
+
+  <h1>Dusseldorf team</h1>
+  <img src="http://2018.igem.org/wiki/images/0/00/T--GO_Paris-Saclay--collab_postcard.png" class="pmeetup">
+  <p>
+    We collaborated with Dusseldorf iGEM team and we participating team designs a postcard which shows an image related
+    to synthetic biology (or your topic) on the front and a small informational text on the back. Afterwards each team’s
+    postcards are exchanged with other iGEM-teams so that every team can collect postcards from all over the world. The
+    received postcards can then be shared with people in the neighbourhood, during public events and so on. We chose to
+    put the picture of our challenge in the front, and in the back a brief description of the Grenoble and the GO Paris
+    Saclay teams.
+  </p>
+  <p class="spacemaker"></p>
+
+
+  <h1>Sorbonne and Bordeaux university team</h1>
+  <img src="http://2018.igem.org/wiki/images/a/a3/T--GO_Paris-Saclay--collabsorbbord.png" class="pmeetup"
+       style="width: 70%;">
+  <p>
+    With the help of Sorbonne University and the Bordeaux IGEM team, we organised a Seminar , the 26 of september, about
+    synthetic Biology. Aliaa El Dairouty (PHD student in public law), Alexei Grinbaud (researcher at CEA) and Pierre
+    Crozet (lecturer at Sorbonne University) were kind enough to join our little project and introduce different topics
+    to our audience. We hope this collaboration between our 3 team will last in time, in the IGEM competition.
+  </p>
+
+  <h1>Evry team</h1>
+  <img src="http://2018.igem.org/wiki/images/9/9a/T--GO_Paris-Saclay--evryretraite.png" class="pmeetup"
+       style="width: 70%;">
+  <p>
+  </p>
+
+
+  <p class="spacemaker"></p>
+  <p>These collaboration would not have been the same without the meetups we attended :</p>
+
+  <h1>European meetup with the iGEM community</h1>
+
+  <div>
+    <img class="emeetupimgtall" src="http://2018.igem.org/wiki/images/2/21/T--GO_Paris-Saclay--european_meetup_1.jpg">
     <img class="emeetupimg" src="http://2018.igem.org/wiki/images/a/a2/T--GO_Paris-Saclay--european_meetup_2.jpg">
-  We were delighted to participate in the iGEM European meet-up in Munich. There we got the chance to present our project in its earliest stages to:
+    <p>We were delighted to participate in the iGEM European meet-up in Munich. There we got the chance to present our
+      project in its earliest stages to:</p>
 
 
-    </div>
-    <div style="clear:both;">
+  </div>
+  <div style="clear:both;">
     <mat-grid-list cols="4" rowHeight="3em" class="teamgrid">
       <mat-grid-tile
         *ngFor="let team of team_list"
@@ -20,33 +85,26 @@
         {{team}}
       </mat-grid-tile>
     </mat-grid-list>
-      Thanks to this amazing meetup we got the chance to ear about fantastic project happening nearby. It was the first
-      poster session for our team and we finished 2nd. After the meetup we stayed in touch we some of the IGEM teams.
+    <p>Thanks to this amazing meetup we got the chance to ear about fantastic project happening nearby. It was the first
+      poster session for our team and we finished 2nd. After the meetup we stayed in touch we some of the IGEM
+      teams.</p>
 
-    </div>
+  </div>
 
-    <div class="spacemaker"></div>
+  <div class="spacemaker"></div>
 
-    <div class="mat-h1">Parisian meetup</div>
-    The Parisian meetup was the first time we presented our project to all the French teams: Bordeaux, Toulouse, Pasteur,
+  <h1>Parisian meetup</h1>
+  <p>The Parisian meetup was the first time we presented our project to all the French teams: Bordeaux, Toulouse,
+    Pasteur,
     Evry, Grenoble and Sorbonne University. They gave us some amazing feedback about our project and lots of compliments
     about our presentation. We were blessed to be there, and after this meetup we kept in touch with IGEM Bordeaux,
-    Sorbonne and Grenoble which we were already talking to (more information below).
-    <img class="pmeetup" src="http://2018.igem.org/wiki/images/7/76/T--GO_Paris-Saclay--parisian_meetup.jpg">
+    Sorbonne and Grenoble.
+  </p>
+  <img class="pmeetup" src="http://2018.igem.org/wiki/images/7/76/T--GO_Paris-Saclay--parisian_meetup.jpg">
 
-    <div class="spacemaker"></div>
-
-    <div class="mat-h1">Sorbonne university</div>
-
-    Sorbonne University/IGEM GO Paris_Saclay is probably the best example of what a real collaboration is. Because our
-    team lacked programmers and designers, they proposed to help us with the coding part of IGEM (which really helped us in
-    creating our wiki), and with the sketching process of our new logo.
-    We, on the other hand, realised that there was no mathematician in their team. Our two mathematicians proposed to
-    work with them on the modelling of their project.
-
-    <img class="pmeetup" src="http://2018.igem.org/wiki/images/4/48/T--GO_Paris-Saclay--sorbonne_collab.jpg">
+  <div class="spacemaker"></div>
 
 
-  </mat-card>
-</div>
+</mat-card>
+
 
