--- a/src/app/demonstrate/demonstrate.component.html
+++ b/src/app/demonstrate/demonstrate.component.html
@@ -1,3 +1,18 @@
-<p>
-  demonstrate works!
-</p>
+<div class="bannercontainer">
+  <img src="http://2018.igem.org/wiki/images/c/c8/T--GO_Paris-Saclay--stagedlab_underbanner.png"
+       class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png"
+       class="bannerimg superposedbanner2">
+  <div class="headlinetext">Demonstrate</div>
+</div>
+
+<mat-card class="dashboard-card largemargin">
+  <p class="withlettrine">We designed synthetic cassettes encoding a new biotransformation pathway using an heterologous
+    carboxypeptidase in Escherichia coli. In only 5 h, our ‘cleaning factory’ drastically removes MTX from the media.
+    During our project we demonstrated that the level of MTX after getting through our E. coli population, dropped from
+    512 µM to close to 0, proving that our degrading system is efficient.</p>
+
+  <div class="formoredetailssee">For more details, see the <a (click)="this.router.navigate(['/project'], { fragment: 'top'})">synthesis of our project</a></div>
+
+
+</mat-card>
