--- a/src/gops_theme.css
+++ b/src/gops_theme.css
@@ -1880,6 +1880,9 @@ ng-list-item .mat-list-item:hover {
 ng-list-item .mat-divider {
   border: 0px; }
 
+h1 {
+  font-size: 20pt; }
+
 h1, h2, h3 {
   font-weight: bolder; }
 
@@ -1912,6 +1915,10 @@ a {
   width: 116%;
   margin: 1.2em -8%; }
 
+.ultralargefig {
+  width: 125%;
+  margin: 1.2em -12.5%; }
+
 .captionafterapicture {
   font-size: 11pt;
   color: grey; }
@@ -1927,10 +1934,17 @@ a {
 .spacemaker {
   margin-top: 4em; }
 
+p {
+  font-size: 14pt;
+  font-family: 'Lato', Helvetica, SansSerif; }
+
 .withlettrine::first-letter {
   float: left;
-  font-size: 6em;
-  padding: 0.05em 0.05em 0 0; }
+  font-size: 75px;
+  line-height: 60px;
+  padding-top: 4px;
+  padding-right: 5px;
+  padding-left: 3px; }
 
 .formoredetailssee {
   font-size: 14pt;
