--- a/src/app/collaborations/collaborations.component.css
+++ b/src/app/collaborations/collaborations.component.css
@@ -1,4 +1,4 @@
-#gcontainer{
+#gcontainer {
   margin: 20px;
 
 }
@@ -25,8 +25,8 @@
 .emeetupimgtall {
   width: 46%;
   margin-left: 1em;
-  float:right;
-   overflow: hidden;
+  float: right;
+  overflow: hidden;
 }
 
 .teamtile {
@@ -39,8 +39,13 @@
 .pmeetup {
   width: 90%;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2em;
-  margin-bottom: 2em;
+  margin: 2em auto;
 }
+
+.ourcollabwith {
+  font-weight: bolder;
+  margin-left: -20%;
+  margin-right: 2em;
+  float: left;
+}
+
