--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,7 +1,7 @@
-<div class="bannercontainer">
+<div class="bannercontainer" id="top">
   <img src="http://2018.igem.org/wiki/images/1/1b/T--GO_Paris-Saclay--tableau_banner.png" class="bannerimg superposedbanner1">
   <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
-  <div class="headlinetext">Project Design</div>
+  <div class="headlinetext">Project Synthesis</div>
 </div>
 
 <mat-card class="dashboard-card largemargin">
