--- a/src/app/references-page/references-page.component.html
+++ b/src/app/references-page/references-page.component.html
@@ -1,7 +1,10 @@
-<div class="grid-container">
-  <h1 class="mat-h1">List of references</h1>
+<div class="bannercontainer">
+  <img src="http://2018.igem.org/wiki/images/1/1b/T--GO_Paris-Saclay--tableau_banner.png" class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
+  <div class="headlinetext">Bibliography</div>
+</div>
 
-  <mat-card class="dashboard-card" >
+<mat-card class="dashboard-card largemargin">
     <mat-form-field class="search-field">
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search" >
     </mat-form-field>
@@ -74,4 +77,3 @@ export class Reference {
 
     </table>
   </mat-card>
-</div>
