--- a/src/app/wiki-lightproxy/wiki-lightproxy.component.html
+++ b/src/app/wiki-lightproxy/wiki-lightproxy.component.html
@@ -1,4 +1,10 @@
-<img src="http://2018.igem.org/wiki/images/0/0b/T--GO_Paris-Saclay--notebookpage.png" class="bannerimg">
+<div class="bannercontainer">
+  <img src="http://2018.igem.org/wiki/images/c/c8/T--GO_Paris-Saclay--stagedlab_underbanner.png"
+       class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png"
+       class="bannerimg superposedbanner2">
+  <div class="headlinetext">Lab Notebook</div>
+</div>
 
   <mat-card class="wikilp-access-card">
     <mat-card-content class="dashboard-card-content">
